force-app/main/default/objects/Access_Permit__c/Access_Permit__c.object-meta.xml
<CustomObject>
    <label>Access Permit</label>
    <nameField>
        <label>Access Permit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Access Permits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>