force-app/main/default/objects/Access_Permit__c/fields/APR_Number__c.field-meta.xml
<CustomField>
    <fullName>APR_Number__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>Apr Number</label>
    <type>AutoNumber</type>
</CustomField>