force-app/main/default/objects/Access_Permit__c/fields/Check_In_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Check_In_DateTime__c</fullName>
    <label>Check In Datetime</label>
    <type>DateTime</type>
</CustomField>