force-app/main/default/objects/Access_Permit__c/fields/Check_In_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Remarks__c</fullName>
    <label>Check In Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>