force-app/main/default/objects/Access_Permit__c/fields/Company_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_ID_Number__c</fullName>
    <label>Company Id Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>