force-app/main/default/objects/Access_Permit__c/fields/Emirates_ID_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Emirates_ID_Expiry__c</fullName>
    <label>Emirates Id Expiry</label>
    <type>Date</type>
</CustomField>