force-app/main/default/objects/Access_Permit__c/fields/Gate_House__c.field-meta.xml
<CustomField>
    <fullName>Gate_House__c</fullName>
    <label>Gate House</label>
    <length>100</length>
    <type>Text</type>
</CustomField>