force-app/main/default/objects/Access_Permit__c/fields/Permit_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Permit_From_Date__c</fullName>
    <label>Permit From Date</label>
    <type>Date</type>
</CustomField>