force-app/main/default/objects/Access_Permit__c/fields/Permit_PDF_URL__c.field-meta.xml
<CustomField>
    <fullName>Permit_PDF_URL__c</fullName>
    <label>Permit Pdf Url</label>
    <type>Url</type>
</CustomField>