force-app/main/default/objects/Access_Permit__c/fields/Permit_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Permit_To_Date__c</fullName>
    <label>Permit To Date</label>
    <type>Date</type>
</CustomField>