force-app/main/default/objects/Access_Permit__c/fields/Permit_Type__c.field-meta.xml
<CustomField>
    <fullName>Permit_Type__c</fullName>
    <label>Permit Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>