force-app/main/default/objects/Access_Permit__c/fields/Recurring_Type__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Type__c</fullName>
    <label>Recurring Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One-Time</fullName>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>