force-app/main/default/objects/Access_Permit__c/fields/Security_Officer__c.field-meta.xml
<CustomField>
    <fullName>Security_Officer__c</fullName>
    <label>Security Officer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>