force-app/main/default/objects/Access_Permit__c/fields/Trade_License_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Trade_License_Expiry__c</fullName>
    <label>Trade License Expiry</label>
    <type>Date</type>
</CustomField>