force-app/main/default/objects/Access_Permit__c/fields/Vehicle_Plate__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Plate__c</fullName>
    <label>Vehicle Plate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>