force-app/main/default/objects/Access_Permit__c/fields/Vendor_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Mobile__c</fullName>
    <label>Vendor Mobile</label>
    <type>Phone</type>
</CustomField>